# django-csp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES  CHANGES.md  LICENSE  MANIFEST.in  README.rst  fabfile.py  pyproject.toml  requirements.txt  ruff.toml  run.sh  setup.cfg  setup.py  test_settings.py  test_urlconf.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yaml  run-tests.yaml
csp/: __init__.py  admin.py  apps.py  checks.py  constants.py  context_processors.py  decorators.py  exceptions.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
csp/conf/: __init__.py  defaults.py  deprecation.py
csp/contrib/: rate_limiting.py
csp/extensions/: __init__.py
csp/migrations/: 0001_initial.py
csp/templates/csp/email/: new_report.ltxt  report.ltxt
csp/templatetags/: csp.py
csp/tests/: __init__.py  environment.py  settings.py  test_checks.py  test_constants.py  test_context_processors.py  test_contrib.py  test_decorators.py  test_jinja_extension.py  test_middleware.py  test_templatetags.py  test_utils.py  utils.py
docs/: Makefile  changing.rst  conf.py  configuration.rst  contributing.rst  decorators.rst  index.rst  installation.rst  migration-guide.rst  nonce.rst  reports.rst  trusted_types.rst
examples/csp-project/: settings.py  urls.py
