[metadata]
name = django_csp
version = 3.8rc
description = Django Content Security Policy support.
long_description= file: README.rst
author = James Socol
author_email = me@jamessocol.com
maintainer = Mozilla MEAO team
maintainer_email = meao-backend@mozilla.com
url = http://github.com/mozilla/django-csp
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Environment :: Web Environment :: Mozilla
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
project_urls =
    Documentation = http://django-csp.readthedocs.org/
    Changelog = https://github.com/mozilla/django-csp/blob/main/CHANGES
    Bug Tracker = https://github.com/mozilla/django-csp/issues
    Source Code = https://github.com/mozilla/django-csp


[options]
packages = find:
install_requires = Django>=3.2
zip_safe=False
include_package_data = True

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-django
    pytest-ruff
    jinja2>=2.9.6
jinja2 =
    jinja2>=2.9.6

[tool:pytest]
addopts = -vs --tb=short --ruff --ruff-format

DJANGO_SETTINGS_MODULE = csp.tests.settings
